@@ -1,35 +1,40 @@
 package softuni.exam.service.impl;
 
-import com.google.gson.Gson;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import softuni.exam.models.dto.AstronomerRootDto;
+import softuni.exam.models.dto.AstronomerSeedDto;
+import softuni.exam.models.entity.Astronomer;
+import softuni.exam.models.entity.Star;
 import softuni.exam.repository.AstronomerRepository;
+import softuni.exam.repository.StarRepository;
 import softuni.exam.service.AstronomerService;
-import softuni.exam.util.ValidationUtils;
+import softuni.exam.util.ValidationUtil;
 
+import javax.xml.bind.JAXBContext;
 import javax.xml.bind.JAXBException;
+import javax.xml.bind.Unmarshaller;
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
+import java.util.Optional;
 
 @Service
 public class AstronomerServiceImpl implements AstronomerService {
-    private static String ASTRONOMER_FILE_PATH = "src/main/resources/files/xml/astronomers.xml";
+
+    private static final String FILE_PATH = "src/main/resources/files/xml/astronomers.xml";
 
     private final AstronomerRepository astronomerRepository;
-    private final ValidationUtils validationUtils;
+    private final StarRepository starRepository;
+    private final ValidationUtil validationUtil;
     private final ModelMapper modelMapper;
-    private final Gson gson;
 
-
-    @Autowired
-    public AstronomerServiceImpl(AstronomerRepository astronomerRepository, ValidationUtils validationUtils, ModelMapper modelMapper, Gson gson) {
+    public AstronomerServiceImpl(AstronomerRepository astronomerRepository, StarRepository starRepository, ValidationUtil validationUtil, ModelMapper modelMapper) {
         this.astronomerRepository = astronomerRepository;
-        this.validationUtils = validationUtils;
+        this.starRepository = starRepository;
+        this.validationUtil = validationUtil;
         this.modelMapper = modelMapper;
-        this.gson = gson;
     }
 
     @Override
@@ -39,14 +44,35 @@ public class AstronomerServiceImpl implements AstronomerService {
 
     @Override
     public String readAstronomersFromFile() throws IOException {
-        return Files.readString(Path.of(ASTRONOMER_FILE_PATH));
+        return new String(Files.readAllBytes(Path.of(FILE_PATH)));
     }
 
     @Override
     public String importAstronomers() throws IOException, JAXBException {
-       final StringBuilder stringBuilder = new StringBuilder();
+        StringBuilder sb = new StringBuilder();
+
+        JAXBContext jaxbContext = JAXBContext.newInstance(AstronomerRootDto.class);
+        Unmarshaller unmarshaller = jaxbContext.createUnmarshaller();
+        AstronomerRootDto astronomerRootDto = (AstronomerRootDto)unmarshaller.unmarshal(new File(FILE_PATH));
+
+        for (AstronomerSeedDto astronomerSeedDto : astronomerRootDto.getAstronomerSeedDtos()) {
+            Optional<Astronomer> optionalAstronomer = this.astronomerRepository
+                    .findByFirstNameAndLastName(astronomerSeedDto.getFirstName(), astronomerSeedDto.getLastName());
+            Optional<Star> optionalStar = this.starRepository.findById(astronomerSeedDto.getStar());
+            if (!this.validationUtil.isValid(astronomerSeedDto) || optionalAstronomer.isPresent() || optionalStar.isEmpty()) {
+                sb.append("Invalid astronomer\n");
+                continue;
+            }
+
+            Astronomer astronomer = this.modelMapper.map(astronomerSeedDto, Astronomer.class);
+            astronomer.setObservingStar(optionalStar.get());
+            this.astronomerRepository.saveAndFlush(astronomer);
+
+            sb.append(String.format("Successfully imported astronomer %s %s - %.2f\n",
+                    astronomer.getFirstName(), astronomer.getLastName(), astronomer.getAverageObservationHours()));
+        }
 
 
-        return null;
+        return sb.toString();
     }
 }
